# SF-ETT-Manifold

./: .gitignore  README.md  SFETT_LHH_exp.ipynb  TTSFTucker_Hilbert_exp.ipynb  pyproject.toml
src/sfett/: __init__.py  manifolds.py  tensors.py  tools.py
