[project]
name = "sfett"
version = "0.1.0"
description = "Demostrative python implementation of Riemannian optimization framework on the smooth manifold of fixed SF-ETT rank"
authors = [
    {name = "CrabLover",email = "molozhavenko.aa@phystech.edu"}
]
license = {text = "MiT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "tntorch (>=1.1.2,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.10"
torch = {source = "pytorch-gpu"}
torchvision = {source = "pytorch-gpu"}
torchaudio = {source = "pytorch-gpu"}

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
pytest = "^8.4.1"
wandb = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
